--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <nav>
             <div class="logo-name"> Mohinuddeen.</div>
-            <img src="images/000000.png" class="logo">
+            <img src="main-img.png" class="logo">
             <ul id="sidemenu">
                <li><a href="#header">Home</a></li>
                <li><a href="#about">About</a></li>
