--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="home-img"></div>
         <div class="header-text">
         
-            <p>My Portfolio,</p>
-            <h1>hi, I'm <span>Mohinuddeen <br></span>  from india</h1>
+            
+            <h1>hi, I'm  <span> Mohinuddeen </span><br> from india</h1>
             <p> <span-1> Web devolper/ Trader </span-1></p>
-            <p><span-2> “There is no greater agony than bearing an untold story inside you.” <br> - Maya Angelou,</span-2></p>
+            <p><span-2> “There is no greater agony than bearing an untold story inside you.” - Maya Angelou,</span-2></p>
           </div>
     </div>
 </div>
