--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     
               
-    </div><a href="#" class="btn">See more</a></div>
+    <div><a href="#" class="btn">See more</a></div>
 
 
 
