--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul id="sidemenu">
                <li><a href="#header">Home</a></li>
                <li><a href="#about">About</a></li>
-               <li><a href="#services">Services</a></li>
+               <li><a href="#Services">Services</a></li>
                <li><a href="#contact">contact</a></li>
                <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
