--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             
             <h1>hi, I'm  <span> Mohinuddeen </span><br> from india</h1>
             <p> <span-1> Web devolper/ Trader </span-1></p>
-            <p><span-2> “There is no greater agony than bearing an untold story inside you.” - Maya Angelou,</span-2></p>
+            <p><span-2> “A Man Is What He Thinks About All Day” - Ralph Waldo Emerson.</span-2></p>
           </div>
     </div>
 </div>
@@ -49,7 +49,7 @@
        
             <div class="about-col-2">
                 <h1 class="sub-title">About me;</h1>
-                <p> about.me is a personal web hosting service co-founded by Ryan Freitas, Tony Conrad and Tim Young in October 2009. The site offers registered users a simple platform from which to link multiple online identities, relevant external sites, and popular social networking websites such as Facebook, Flickr, and Google+</p>
+                <p>I Am A Programmer And A Stock Trader Based In India. I create Designs/Websites For People . I Love What I Do Its Adective.  I was An Enthusiastic Kid Who Likes To Take One Step Extra On Everything I Do. One Particular Day I Saw My Elder Brother Opening Inspect Element On His Computer And I Saw A Bunch Of Codes, Tags, Packs Of Boxes  Colors I was Amazed To See All That Cool Stuff There I Want To Do Those Things Too And That's How My Interest Started In The World Of Programming.</p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('programming')">Programming</p>
                     <p class="tab-links" onclick="opentab('stocks')">Stocks</p>
