--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
           <div>
             <i class="fa-solid fa-code"></i>
             <h2>Web Design</h2>
-            <p> this the discripiton of the web design and the context of the data besed on science and data</p>
+            <p> I Can  Develop/Design You a Full Stack Website.</p>
             <a href="#"> Learn more</a>
           </div>
           <div>
             <i class="fa-solid fa-crop-simple"></i>
             <h2>UI/UX design</h2>
-            <p> this the discripiton of the web design and the context of the data besed on science and data</p>
+            <p>I Can Develop A Website UI Design/Dashboard Mobile App UI/UX Design.</p>
             <a href="#">Learn more</a>
           </div>
           <div>
             <i class="fa-brands fa-app-store"></i>
             <h2>App Design</h2>
-            <p> this the discripiton of the web design and the context of the data besed on science and data</p>
+            <p> I Can Develop A Mobile Application For Android and IOS</p>
             <a href="#"> Learn more</a>
           </div>
        </div>
